# exalt-extractor

./: .flake8  .gitignore  README.md  extractor.py  main.py  pyproject.toml  requirements.txt
assets/: AudioClip.py  BuildSettings.py  Enums.py  GameObject.py  MonoBehaviour.py  MonoScript.py  SpriteAtlas.py  TextAsset.py  Texture2D.py  __init__.py
utils/: ActionScript.py  Extractor.py  Files.py  Logger.py  Resources.py  Spritesheets.py  __init__.py
