[tool.poetry]
name = "exalt-extractor"
version = "1.0.0"
description = ""
authors = ["him <im@him.is>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
UnityPy = "^1.7.34"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
